# talloc

./: .gitignore  CMakeLists.txt  in.txt  justfile  malloc  malloc.c  malloc.h  malloc_test.c  notes.md  numbers.txt  util.c  util.h
